--- a/math/math_1.ipynb
+++ b/math/math_1.ipynb
@@ -194,7 +194,7 @@
     "    print(f'{n+1}:{dev_measure}')\n",
     "    chi_quad+=dev_measure\n",
     "    n+=1\n",
-    "print(f'Сумма отклонений(χ2):{chi_quad}')"
+    "print(f'Сумма χ2:{chi_quad}')"
    ]
   },
   {
