--- a/math/math_1.ipynb
+++ b/math/math_1.ipynb
@@ -188,7 +188,7 @@
    "source": [
     "chi_quad = 0\n",
     "n=-1\n",
-    "print('Хи-квадрат Пирсона для элементов: ')\n",
+    "print('Мера отклонения Пирсона для элементов: ')\n",
     "for i in num_count.values():\n",
     "    dev_measure = ((i-sum(num_count.values())*0.1)**2)/(sum(num_count.values())*0.1)\n",
     "    print(f'{n+1}:{dev_measure}')\n",
