--- a/math/math_1.ipynb
+++ b/math/math_1.ipynb
@@ -202,7 +202,7 @@
    "id": "18817147",
    "metadata": {},
    "source": [
-    "Для рассчёта правосторонней вероятности распределения хи-квадрат используем формулу(Excel):\n",
+    "Для рассчёта вероятности распределения хи-квадрат используем формулу(Excel):\n",
     "\n",
     "=ХИ2.РАСП.ПХ(χ2;степени_свободы)\n",
     "\n",
